<resources>
    <string name="app_name">晓音乐</string>
    <string name="signIn">签到</string>
    <string name="commingSoon">敬请期待</string>
    <string name="setting">设置</string>
    <string name="nightMode">夜间模式</string>
    <string name="exit">退出</string>
    <string name="myMessage">我的消息</string>
    <string name="vip">VIP会员</string>
    <string name="shoppingMall">商城</string>
    <string name="gameRecommend">游戏推荐</string>
    <string name="listenOnLine">在线听歌免流量</string>
    <string name="myFriend">我的好友</string>
    <string name="nearbyPerson">附近的人</string>
    <string name="personalSkin">个性换肤</string>
    <string name="findSongByListen">听歌识曲</string>
    <string name="stopPlayTimely">定时停止播放</string>
    <string name="scan">扫一扫</string>
    <string name="musicAlarm">音乐闹铃</string>
    <string name="driveMode">驾驶模式</string>
    <string name="musicCloudDisk">音乐云盘</string>
    <string name="coupon">优惠券</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search">搜索</string>
    <string name="singerClassification">歌手分类</string>
    <string name="hotSearch">热门搜索</string>
    <string name="inputKeyWord">请输入关键词</string>
    <string name="retry">点击重试</string>
    <string name="noData">暂无数据</string>
    <string name="loading">加载中...</string>
    <string name="haveIn">已入驻</string>
    <string name="follow">关注</string>
    <string name="collect">收藏</string>
    <string name="personalPager">个人主页</string>
    <string name="share">分享</string>
    <string name="music">音乐</string>
    <string name="aboutTa">关于TA</string>
    <string name="dynamic">动态</string>
    <string name="download">下载</string>
    <string name="multiSelection">多选</string>
    <string name="playAll">播放全部</string>
    <string name="save">保存</string>
    <string name="tag">标签：</string>
    <string name="saveCover">保存封面</string>
    <string name="wait">请稍后</string>
    <string name="localMusic">本地音乐</string>
    <string name="recentPlay">最近播放</string>
    <string name="downloadManager">下载管理</string>
    <string name="myCollection">我的收藏</string>
    <string name="myRadio">我的电台</string>
    <string name="scanLocalMusic">扫描本地音乐</string>
    <string name="selectSortMethod">选择排序方法</string>
    <string name="updateMusicQuality">升级音质</string>
    <string name="getCoverLyric">获取封面歌词</string>
    <string name="appreciateMusic">赞赏该曲</string>
    <string name="collectToSongSheet">收藏到歌单</string>
    <string name="evaluate">评论</string>
    <string name="singer">歌手</string>
    <string name="album">专辑</string>
    <string name="MusicQuality">音质</string>
    <string name="video">视频</string>
    <string name="timeStopPlay">定时停止播放</string>
    <string name="recommend">推荐</string>
    <string name="friend">朋友</string>
    <string name="radio">电台</string>
    <string name="privateFM">私人FM</string>
    <string name="dayRecommend">每日推荐</string>
    <string name="songSheet">歌单</string>
    <string name="rank">排行榜</string>
    <string name="fineSongSheet">精品歌单</string>
    <string name="reommendSongSheet">推荐歌单</string>
    <string name="allSongSheet">所有歌单</string>
    <string name="listLoop">列表循环</string>
    <string name="collectAll">收藏全部</string>
    <string name="singleLoop">单曲循环</string>
    <string name="randomPlay">随机播放</string>
    <string name="haveCollected">已收藏</string>
    <string name="latestMusic">最新音乐</string>
    <string name="note_serviceIsNull">服务为空</string>
    <string name="finishDownload">下载完成</string>
    <string name="fileExist">文件已存在</string>
    <string name="login">登录</string>
    <string name="forgetPassword">forgetPassword</string>
    <string name="loginNow">立即登录</string>
    <string name="password">Password</string>
    <string name="userName">userName</string>
    <string name="rePassword">RePassword</string>
    <string name="login_e">Login</string>
    <string name="phoneNum">PhoneNum</string>
    <string name="register_e">Register</string>
    <string name="register">注册</string>
    <string name="changeAccount">切换账号</string>
    <string name="gettingLyric">获取歌词中...</string>
    <string name="listeningToSong">听歌识曲</string>
    <string name="myGrade">我的等级</string>
    <string name="currentGrade">当前等级：</string>


    <!--Navigation列表标题-->
    <string-array name="navigationListTitle">
        <item>我的消息</item>
        <item>VIP会员</item>
        <item>商城</item>
        <item>游戏推荐</item>
        <item>在线听歌免流量</item>

        <item>我的好友</item>
        <item>附近的人</item>

        <item>个性换肤</item>
        <item>听歌识曲</item>
        <item>定时停止播放</item>
        <item>扫一扫</item>
        <item>音乐闹铃</item>
        <item>驾驶模式</item>
        <item>音乐云盘</item>
        <item>优惠券</item>

    </string-array>

</resources>
